--- a/pages/words_guide.html
+++ b/pages/words_guide.html
@@ -22,7 +22,7 @@
 
 <body
     style="background: url(https://s2.ax1x.com/2019/03/31/ArSVDs.png) 1510.65px 0px / auto 100% no-repeat fixed, url(https://s2.ax1x.com/2019/03/31/ArSZbn.jpg) 0% 0% / auto repeat scroll;position:relative;">
-    
+
     <nav class="nav navbar-inverse navbar-fixed-top col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="container">
             <div class="navbar-header">
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-    
+
     <div class="container">
 
 
@@ -125,7 +125,26 @@
 
         </div>
 
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
 
+
+
+            <div class="jumbotron top-space text-center">
+                <div class="well well-sm">
+
+                    <h2>2019/6/10：转专业/转学校</h2>
+                </div>
+
+                <ul class="list-group">
+                    <li class="list-group-item">上海插班生</li>
+                    <li class="list-group-item">双学位&辅修&校际交流项目</li>
+                    <li class="list-group-item">c9联盟</li>
+                    <li class="list-group-item">武汉高校联盟</li>
+                    <li class="list-group-item">千万别选自己绝对不想读的</li>
+                </ul>
+
+            </div>
+        </div>
 
 
     </div>
