--- a/demo.html
+++ b/demo.html
@@ -109,12 +109,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="./demo.html" class="navbar-brand">Echo-YUSS</a>
+                <a href="https://stugrua.github.io/EchoFromYuss" class="navbar-brand">Echo-YUSS</a>
             </div>
             <div id="menu" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="./words_guide.html">文字记录</a></li>
-                    <li><a href="./sug.html">学长学姐の感言/建议</a></li>
+                    <li><a href="pages/words_guide.html">文字记录</a></li>
+                    <li><a href="pages/sug.html">学长学姐の感言/建议</a></li>
                     <!--下拉菜单-->
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             奇奇怪怪<span class="caret"></span></a>
@@ -206,7 +206,7 @@
                 <div class="row">
                     <h1 class="lead">星耀18/19志愿交流归档站点</h1>
                     <p class="tagline">EchoFromYUSSer</p>
-                    <p><a class="btn btn-default btn-lg" role="button" href="./words_guide.html">文字归档</a> <a class="btn btn-action btn-lg" role="button" href="./sug.html">心路历程？</a></p>
+                    <p><a class="btn btn-default btn-lg" role="button" href="pages/words_guide.html">文字归档</a> <a class="btn btn-action btn-lg" role="button" href="pages/sug.html">心路历程？</a></p>
                 </div>
             </div>
         </header>
