--- a/pages/sug.html
+++ b/pages/sug.html
@@ -37,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="./demo.html" class="navbar-brand">Echo-YUSS</a>
+                <a href="https://stugrua.github.io/EchoFromYuss" class="navbar-brand">Echo-YUSS</a>
             </div>
             <div id="menu" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -140,8 +140,8 @@
                 
                             <h2>From 范文一</h2>
                     </div>
-                <img src="../files/img/1.jpg" class="img-responsive" alt="Image">
-                <img src="../files/img/2.jpg" class="img-responsive" alt="Image">
+                <img src="https://s2.ax1x.com/2019/06/11/Vg79mQ.jpg" class="img-responsive" alt="Image">
+                <img src="https://s2.ax1x.com/2019/06/11/Vg7SOg.jpg" class="img-responsive" alt="Image">
 
             </div>
         </div>
