--- a/pages/words_guide.html
+++ b/pages/words_guide.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="./demo.html" class="navbar-brand">Echo-YUSS</a>
+                <a href="https://stugrua.github.io/EchoFromYuss" class="navbar-brand">Echo-YUSS</a>
             </div>
             <div id="menu" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
