--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="row">
                     <h1 class="lead">星耀18/19志愿交流归档站点</h1>
                     <p class="tagline">EchoFromYUSSer</p>
-                    <p><a class="btn btn-default btn-lg" role="button" href="pages/words_guide.html">文字归档</a> <a class="btn btn-action btn-lg" role="button" href="pages/sug.html">心路历程？</a></p>
+                    <p><a class="btn btn-default btn-lg" role="button" href="pages/words_guide.html">文字归档</a> <a class="btn btn-primary btn-lg" role="button" href="pages/sug.html">心路历程？</a></p>
                 </div>
             </div>
         </header>
