--- a/pages/sug.html
+++ b/pages/sug.html
@@ -150,7 +150,7 @@
 
 
             <div class="jumbotron top-space">
-                <div class="well well-sm">
+                <div class="well well-sm text-center">
 
                     <h2>From 张琨</h2>
                 </div>
