--- a/pages/sug.html
+++ b/pages/sug.html
@@ -145,6 +145,7 @@
 
             </div>
         </div>
+        
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
 
@@ -196,16 +197,19 @@
 
                 <h2>From 周津宇</h2>
             </div>
-            <p>  给学弟学妹的一点点忠告：<br />  话是这么说，其实也就是总结一下我报志愿时的经历和大学一年的见闻，说点也许帮得上忙的东西。<br />  好学校、大城市都是有一个明显的优先级的顺序的，能去就去，有明显的冲突的时候其实去哪里都差不多，需要权衡，只是别后悔就行了。（不过做起来并不轻松，这个选择帮不了你）
+            <p> 给学弟学妹的一点点忠告：<br /> 话是这么说，其实也就是总结一下我报志愿时的经历和大学一年的见闻，说点也许帮得上忙的东西。<br />
+                好学校、大城市都是有一个明显的优先级的顺序的，能去就去，有明显的冲突的时候其实去哪里都差不多，需要权衡，只是别后悔就行了。（不过做起来并不轻松，这个选择帮不了你）
             </p>
 
-            <p>  想说的还是兴趣啊兴趣啊兴趣啊，兴趣＋恰饭=专业了。可能选学校和地区会被分数限制，但是选专业还是要问心的。首先就是想想你喜欢些啥，但是嘴上说着喜欢是完全不够的（正如追求女孩子一样）。你全凭爱好和幻想补全一个专业的全貌，真的不会心虚吗？选的专业就业前景怎么样，是不是真正想钻研的还是只是一时兴起，跟随大流的选择是你最后想要的吗？你需要的是尽可能完整地去了解整个专业的全貌，这点来说首先网络资源齐全，你也可以问群里学长学姐，并且因为每个学校对专业的要求不一样，你也需要向合适学校的学长们捞点专业信息，或者捞点人脉。<br />  兴趣永远是最棒的老师，在大学要想混出点啥来，不可缺的就是兴趣和毅力，我的文化课成绩满糟糕，但是我是混子吗？不是，我在忙活的编程竞赛给我的提升是我觉得主科都给不了的，这里面需要的就是以数学为核心的算法，你说要对应我的数学系吗？其实也不尽然，但是我能这么回答，我喜欢数学，所以我选了数学系，也坚持了编程竞赛的训练。尽早确定兴趣真的很重要。
+            <p> 想说的还是兴趣啊兴趣啊兴趣啊，兴趣＋恰饭=专业了。可能选学校和地区会被分数限制，但是选专业还是要问心的。首先就是想想你喜欢些啥，但是嘴上说着喜欢是完全不够的（正如追求女孩子一样）。你全凭爱好和幻想补全一个专业的全貌，真的不会心虚吗？选的专业就业前景怎么样，是不是真正想钻研的还是只是一时兴起，跟随大流的选择是你最后想要的吗？你需要的是尽可能完整地去了解整个专业的全貌，这点来说首先网络资源齐全，你也可以问群里学长学姐，并且因为每个学校对专业的要求不一样，你也需要向合适学校的学长们捞点专业信息，或者捞点人脉。<br />
+                兴趣永远是最棒的老师，在大学要想混出点啥来，不可缺的就是兴趣和毅力，我的文化课成绩满糟糕，但是我是混子吗？不是，我在忙活的编程竞赛给我的提升是我觉得主科都给不了的，这里面需要的就是以数学为核心的算法，你说要对应我的数学系吗？其实也不尽然，但是我能这么回答，我喜欢数学，所以我选了数学系，也坚持了编程竞赛的训练。尽早确定兴趣真的很重要。
             </p>
 
-            <p>  你们上届理二的一个学长，读的是万众瞩目的计算机科学，但是还是想回去复读重新高考；<br />  然后我一同班同学，甘愿留级来争取转专业的成功；<br />  还有一个同学，嫌弃学校学风差专业不适合，他的大一就极为痛苦，或者说我看着很别扭，痛苦啥的咬咬牙就过去了，别扭这种感觉你们体会一下
+            <p> 你们上届理二的一个学长，读的是万众瞩目的计算机科学，但是还是想回去复读重新高考；<br /> 然后我一同班同学，甘愿留级来争取转专业的成功；<br />
+                还有一个同学，嫌弃学校学风差专业不适合，他的大一就极为痛苦，或者说我看着很别扭，痛苦啥的咬咬牙就过去了，别扭这种感觉你们体会一下
             </p>
 
-            <p>  你要问如果只能读好学校的较差专业怎么办，进去委曲求全等一个转专业的机会当然是一个选择，有一个更稳妥的学校也蛮好，这就是平行志愿的意义，好好把握机会吧，优先级自己定，我是觉得都没差，但是不要一个稳妥的选项都没有最后失学就搞笑了。
+            <p> 你要问如果只能读好学校的较差专业怎么办，进去委曲求全等一个转专业的机会当然是一个选择，有一个更稳妥的学校也蛮好，这就是平行志愿的意义，好好把握机会吧，优先级自己定，我是觉得都没差，但是不要一个稳妥的选项都没有最后失学就搞笑了。
             </p>
 
         </div>
