--- a/pages/sug.html
+++ b/pages/sug.html
@@ -219,7 +219,7 @@
         <div class="jumbotron top-space text-center">
             <div class="well well-sm">
 
-                <h2>From 范文一</h2>
+                <h2>From 凌敏航</h2>
             </div>
             <img src="https://s2.ax1x.com/2019/06/19/VXVYQ0.jpg" class="img-responsive" alt="Image">
 
