--- a/pages/sug.html
+++ b/pages/sug.html
@@ -216,8 +216,9 @@
         </div>
 
 
-        <div class="jumbotron top-space text-center">
+        <div class="jumbotron top-space text-center col-sm-12 col-xs-12 col-lg-6 col-lg-offset-3 block-center">
             <div class="well well-sm">
+            
 
                 <h2>From 凌敏航</h2>
             </div>
