--- a/pages/sug.html
+++ b/pages/sug.html
@@ -135,7 +135,7 @@
 
 
 
-            <div class="jumbotron top-space text-center">
+            <div class="jumbotron top-space text-center col-sm-12 col-xs-12 col-lg-6 col-lg-offset-3 block-center">
                 <div class="well well-sm">
 
                     <h2>From 范文一</h2>
@@ -150,7 +150,7 @@
 
 
 
-            <div class="jumbotron top-space">
+            <div class="jumbotron top-space col-sm-12 col-xs-12  col-lg-12">
                 <div class="well well-sm">
 
                     <h2>From 张琨</h2>
@@ -192,7 +192,7 @@
 
 
 
-            <div class="jumbotron top-space">
+            <div class="jumbotron top-space col-sm-12 col-xs-12  col-lg-12">
                 <div class="well well-sm">
 
                     <h2>From 周津宇</h2>
