--- a/pages/sug.html
+++ b/pages/sug.html
@@ -138,7 +138,7 @@
             <div class="jumbotron top-space text-center col-sm-12 col-xs-12 col-lg-6 col-lg-offset-3 block-center">
                 <p><a class="btn btn-default btn-lg" role="button" href="#fwy">From 范文一（文科）</a> <a class="btn btn-primary btn-lg" role="button" href="sug.html#zk">From 张琨（法学）</a></p>
                 <p><a class="btn btn-default btn-lg" role="button" href="#zjy">From 周津宇（ACM）</a> <a class="btn btn-primary btn-lg" role="button" href="#lmh">From 凌敏航（物理）</a></p>
-                <p><a class="btn btn-default btn-lg" role="button" href="#zsb">From 赵书彬（车辆工程英语强化）</a> <a class="btn btn-primary btn-lg" role="button" href="#yry">From 叶仁燚（医学）</a></p>
+                <p><a class="btn btn-default btn-lg" role="button" href="#zsb">From 赵书彬（车辆工程）</a> <a class="btn btn-primary btn-lg" role="button" href="#yry">From 叶仁燚（医学）</a></p>
                 <p><a class="btn btn-default btn-lg" role="button" href="#wjy">From 王弈嘉（医学）</a></p>
             </div>
 
